Source/WebCore/platform/network/qt/QtMIMETypeSniffer.cpp
@@ -41,7 +41,10 @@ QtMIMETypeSniffer::QtMIMETypeSniffer(QNetworkReply* reply, const QString& advert
 
 bool QtMIMETypeSniffer::sniff()
 {
-    if (!m_reply->isFinished() && m_reply->bytesAvailable() < m_sniffer.dataSize())
+    // See QNetworkReplyWrapper::setFinished().
+    const bool isReplyFinished = m_reply->property("_q_isFinished").toBool();
+
+    if (!isReplyFinished && m_reply->bytesAvailable() < m_sniffer.dataSize())
         return false;
 
     QByteArray data = m_reply->peek(m_sniffer.dataSize());
